[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-ml-library"
version = "0.1.0"
description = "A small machine learning Python library"
authors = [{ name="Hussein Kasim", email="husseinkasim20@yahoo.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
