[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-ml-library"
version = "0.2.0"
description = "My ML utils library"
authors = [{ name="Hussein Kasim", email="husseinkasim20@yahoo.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
